[gd_scene load_steps=5 format=3 uid="uid://8uufatugkdgi"]

[ext_resource type="Script" path="res://send/store_preset/preset_panel.gd" id="1_lxsx8"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_itdk4"]
bg_color = Color(0.156863, 0.25098, 0.231373, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_xgjp2"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_gcqn7"]

[node name="PresetPanel" type="PanelContainer"]
custom_minimum_size = Vector2(300, 70)
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_styles/panel = SubResource("StyleBoxFlat_itdk4")
script = ExtResource("1_lxsx8")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="NameLabel" type="Label" parent="HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.5
theme_override_font_sizes/font_size = 20
text = "presetName"
horizontal_alignment = 1

[node name="LoadButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxEmpty_xgjp2")
theme_override_styles/normal = SubResource("StyleBoxEmpty_xgjp2")
text = "加载"

[node name="DeleteButton" type="Button" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
theme_override_styles/hover = SubResource("StyleBoxEmpty_gcqn7")
theme_override_styles/normal = SubResource("StyleBoxEmpty_gcqn7")
text = "删除"

[connection signal="pressed" from="HBoxContainer/LoadButton" to="." method="_on_load_button_pressed"]
[connection signal="pressed" from="HBoxContainer/DeleteButton" to="." method="_on_delete_button_pressed"]
